--- a/src/Level1.html
+++ b/src/Level1.html
@@ -1,23 +1,14 @@
-<div class="level1">
-	{{#each values as value}}
-		<h4>level 1 #{{value}}</h4>
-		<Level2 condition="{{value % 2}}">
-			<Level3>
-				<span>And more stuff goes in here</span>
-			</Level3>
-		</Level2>
-	{{/each}}
+<div class="level1" ref:wat>
+	<h4>level 1</h4>
+	{{#if condition}}
+		<span>TRUE! {{yield}}</span>
+	{{else}}
+		<span>FALSE! {{yield}}</span>
+	{{/if}}
 </div>
 
 <script>
-	import Level2 from './Level2.html';
-	import Level3 from './Level3.html';
-	
 	export default {
-		components: {
-			Level2,
-			Level3
-		},
 		ondestroy() {
 			console.log('destroy level 1');
 		}
